--- a/style/index.css
+++ b/style/index.css
@@ -36,13 +36,11 @@ td{
 
 #task_circle{
     border: 2px solid gray;
-    border-radius: 250px;
+    border-radius: 0;
     background-color: dimgrey;
     position: fixed;
     top: 10px;
     right: 10px;
-    min-height: 20px;
-    max-height: 200px;
-    min-width: 20px;
-    max-width: 20px;
+    height: 20px;
+    width: 20px;
 }
